[tool.poetry]
name = "apitoolkit-django"
version = "0.1.0"
description = "An APIToolkit SDK for Django"
authors = ["Anthony Alaribe <anthonyalaribe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
