# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "realpython-reader"
version = "0.1.1"
description = ""
readme = "README.md"
authors = [{ name = "Anthony ALaribe", email = "anthonyalaribe@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["API", "APIToolkit", "Observability", "API Monitoring"]
dependencies = [
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/apitoolkit/apitoolkit-django"

